# python-devcontainer-template

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: devops.md  docs-writer.md  frontend-developer.md  frontend-reviewer.md  frontend-tech-lead.md  frontend-tester.md  python-architect.md  python-data-scientist.md  python-developer.md  python-devops.md  python-docs-writer.md  python-migrator.md  python-release-manager.md  python-reviewer.md  python-security-reviewer.md  python-tech-lead.md  python-tester.md  release-manager.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/agents/: devops.md  docs-writer.md  frontend-developer.md  frontend-reviewer.md  frontend-tech-lead.md  python-architect.md  python-data-scientist.md  python-developer.md  python-devops.md  python-docs-writer.md  python-migrator.md  python-release-manager.md  python-reviewer.md  python-security-reviewer.md  python-tech-lead.md  python-tester.md  release-manager.md
docs/: architecture-brief.md
scripts/: sync-agent.sh  sync-all-agents.sh
src/aiproxy/: __init__.py  client.py  errors.py  provider.py  registry.py  streaming.py  types.py
src/aiproxy/providers/: __init__.py  anthropic.py  ollama.py
task_viewer/: README.md
tasks/TASK-1-package-scaffold/: brief.md  state.json
tasks/TASK-1-package-scaffold/handoffs/: 01-coding.in.md
tasks/TASK-2-core-data-model/: brief.md  state.json
tasks/TASK-2-core-types/: brief.md  state.json
tasks/TASK-3-provider-protocol-and-client/: brief.md  state.json
tasks/TASK-3-provider-protocol-client/: brief.md  state.json
tasks/TASK-4-anthropic-provider/: brief.md  state.json
tasks/TASK-5-ollama-provider/: brief.md  state.json
tasks/TASK-6-integration-roundtrip/: brief.md  state.json
tasks/TASK-6-integration-tests/: brief.md  state.json
tasks/TASK-7-tool-call-support/: brief.md  state.json
tasks/_schema/: state.schema.json
tests/: conftest.py
tests/tasks/TASK-1-schema-and-errors/: brief.md  state.json
tests/tasks/TASK-1-schema-and-errors/handoffs/: 01-coding.in.md
tests/tasks/TASK-2-vendor-config/: brief.md  state.json
tests/tasks/TASK-3-xlsx-source/: brief.md  state.json
tests/tasks/TASK-4-normalize-and-validate/: brief.md  state.json
tests/tasks/TASK-5-fuzzy-and-emit/: brief.md  state.json
tests/tasks/TASK-6-cli-wiring/: brief.md  state.json
tests/tasks/_schema/: state.schema.json
